force-app/main/default/objects/QIME_Config__mdt/QIME_Config__mdt.object-meta.xml
<CustomObject>
    <label>QIME Config</label>
    <pluralLabel>QIME Configs</pluralLabel>
</CustomObject>