force-app/main/default/objects/QIME_Config__mdt/fields/Create_Customer_w_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Create_Customer_w_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Customer w/ Invoice</label>
    <type>Checkbox</type>
</CustomField>