force-app/main/default/objects/QIME_Config__mdt/fields/Create_Invoice_From_Opp__c.field-meta.xml
<CustomField>
    <fullName>Create_Invoice_From_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Invoice From Opp</label>
    <type>Checkbox</type>
</CustomField>