force-app/main/default/objects/QIME_Config__mdt/fields/Custom_Field_3_Id__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_3_Id__c</fullName>
    <label>Custom Field 3 Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>