force-app/main/default/objects/QIME_Config__mdt/fields/Default_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Tax_Id__c</fullName>
    <label>Default Tax Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>