force-app/main/default/objects/QIME_Config__mdt/fields/Invoice_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Stage_Name__c</fullName>
    <defaultValue>&quot;Closed Won&quot;</defaultValue>
    <label>Invoice Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>