force-app/main/default/objects/QIME_Config__mdt/fields/Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Id__c</fullName>
    <label>Line Item Id (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>