force-app/main/default/objects/QIME_Config__mdt/fields/Link_By_Memo__c.field-meta.xml
<CustomField>
    <fullName>Link_By_Memo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Link By Memo</label>
    <type>Checkbox</type>
</CustomField>