force-app/main/default/objects/QIME_Config__mdt/fields/Link_Customer_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Link_Customer_By_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Link Customer By Name</label>
    <type>Checkbox</type>
</CustomField>