force-app/main/default/objects/QIME_Config__mdt/fields/Link_Invoice_To_Opp_Using_Memo__c.field-meta.xml
<CustomField>
    <fullName>Link_Invoice_To_Opp_Using_Memo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Link Invoice To Opp Using (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>