force-app/main/default/objects/QIME_Config__mdt/fields/QB_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Product_Id__c</fullName>
    <label>QB Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>