force-app/main/default/objects/QIME_Config__mdt/fields/Use_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Use_Line_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Line Item</label>
    <type>Checkbox</type>
</CustomField>