force-app/main/default/objects/QIME_Config__mdt/fields/Use_Single_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Use_Single_Line_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Single Line Item (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>