force-app/main/default/objects/QIME_Config__mdt/fields/Use_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Use_Tax_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Specify the tax code. This is for NON-US QB companies.</inlineHelpText>
    <label>Use Tax Id</label>
    <type>Checkbox</type>
</CustomField>